package co.siarhei.apps.android.geochat.Model;

import java.util.Date;

public class Chat {
    Date s;

    public Chat() {

    }

    public Date getS() {
        return s;
    }

    public void setS(Date s) {
        this.s = s;
    }
}
